--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,29 @@
-.maincontent {
+body,
+html {
+    margin: 0;
+    padding: 0;
+}
+
+.main-container {
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.show-pop-up-btn {
+    height: 50px;
+    width: 100px;
+    position: relative;
+    background-color: #269CE9;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.show-pop-up-btn:hover {
+    background-color: #eee;
+    color: #555;
+}
+
+.page-container {
     position: absolute;
     left: 0;
     right: 0;
@@ -6,8 +31,68 @@
     bottom: 0;
     height: 100%;
     width: 100%;
-    z-index: 1000000;
-    background: rgba(0, 245, 245, 0.9);
+    background: #eee;
     overflow: auto;
     color: black;
+    display: table;
+    vertical-align: middle;
+    text-align: center;
+}
+
+#pop-up {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 10px;
+    left: 0%;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    transition: all 5s ease-in-out;
+}
+
+h2 {
+    text-align: center;
+    font-family: Tahoma, Arial, sans-serif;
+    color: black;
+}
+
+#pop-up p {
+    overflow: auto;
+    max-height: 600px;
+}
+
+
+.pop-up-content {
+    background-color: #eee;
+    margin: auto;
+    padding: 20px;
+    width: 80%;
+}
+
+.pop-up-close {
+    color: black;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.pop-up-close :hover,
+.pop-up-close :focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+.pop-up-ok {
+    background-color: #269CE9;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.pop-up-ok:visited {
+    background-color: #eee;
+    color: #555;
 }
